--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Task Wizard",
-	"image": "mcr.microsoft.com/devcontainers/go:1-1.23-bookworm",
+	"image": "mcr.microsoft.com/devcontainers/go:1.25-bookworm",
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {
 			"installDirectlyFromGitHubRelease": true,
@@ -14,7 +14,7 @@
 		}
 	},
 	"containerEnv": {
-		"TW_CONFIG_FILE": "/workspaces/task-wizard/config/config.dev.yaml"
+		"TW_CONFIG_FILE": "/workspaces/task-wizard/apiserver/config/config.dev.yaml"
 	},
 	"customizations": {
 		"vscode": {
