--- a/.github/workflows/api-build.yml
+++ b/.github/workflows/api-build.yml
@@ -21,9 +21,11 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.25'
+        check-latest: true
+        cache: true
 
     - name: Build
       run: |
