--- a/.github/workflows/cut-release.yml
+++ b/.github/workflows/cut-release.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Bump frontend version
       run: |
         cd frontend
-        yarn version --new-version-patch --no-git-tag-version
+        yarn version --patch --no-git-tag-version
     - name: Get the latest tag
       id: get_latest_tag
       env:
