--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,9 +6,6 @@ builds:
 - dir: apiserver
   env:
   - CGO_ENABLED=0
-  goos:
-  - linux
-  - darwin
   targets:
   - linux_amd64_v1
   - darwin_arm64
@@ -29,7 +26,7 @@ archives:
     {{- if .Arm }}v{{ .Arm }}{{ end }}
   format_overrides:
   - goos: windows
-    format: zip
+    formats: zip
   files:
   - src: "apiserver/config/config.yaml"
     dst: "config/config.yaml"
