--- a/.github/workflows/full-release.yml
+++ b/.github/workflows/full-release.yml
@@ -79,7 +79,8 @@ jobs:
       - name: Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: build-artifacts
+          name: build-artifacts          
+          path: apiserver
 
       - name: Set up Go
         uses: actions/setup-go@v5
