--- a/frontend/.env.prod
+++ b/frontend/.env.prod
@@ -1,2 +1,7 @@
 VITE_APP_API_URL=
 VITE_BACKEND_VERSION=0.0.0 # To be set during packaging step
+
+# OAuth2 / MSAL Configuration
+VITE_APP_TENANT_ID=00000000-0000-0000-0000-000000000000 # To be set during packaging step
+VITE_APP_CLIENT_ID=00000000-0000-0000-0000-000000000000 # To be set during packaging step
+VITE_APP_REDIRECT_URL=https://localhost:3000/auth/callback # To be set during packaging step
