--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "test:e2e:headed": "playwright test --headed"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.26.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "grpc-web": "^1.5.0",
@@ -24,10 +25,10 @@
     "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.2.1",
     "date-fns": "^4.1.0",
+    "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.6.2",
-    "react": "^19.1.0",
     "vite-plugin-package-version": "^1.1.0"
   },
   "devDependencies": {
@@ -39,24 +40,24 @@
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
-    "@types/react-dom": "^18",
     "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
-    "eslint-plugin-react": "^7.37.4",
     "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest-environment-jsdom": "^30.2.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-react": "^0.0.1",
-    "prettier": "^3.4.2",
     "ts-jest": "^29.4.4",
     "ts-proto": "^2.8.3",
-    "typescript-eslint": "^8.19.1",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.19.1",
     "vite": "^6.4.1"
   }
 }
